# src/controllers/auth.controller.ts
@@ -1,5 +1,6 @@
 import { Request, Response } from "express";
 
+import { ApiError } from "../errors";
 import { authService } from "../services";
 import { ITokenPair, ITokenPayload, IUser } from "../types";
 
@@ -43,6 +44,49 @@ class AuthController {
       const tokenPair = await authService.refresh(oldTokenPair, tokenPayload);
 
       return res.status(200).json({ ...tokenPair });
+    } catch (e) {
+      return res
+        .status(e.status || 500)
+        .json({ error: e.message || "Internal Server Error" });
+    }
+  }
+
+  public async forgotPassword(
+    req: Request,
+    res: Response,
+  ): Promise<Response<void>> {
+    try {
+      const { user } = res.locals;
+
+      if (!user) {
+        throw new ApiError("User not found", 400);
+      }
+
+      const actionToken = await authService.forgotPassword(user._id);
+
+      return res.status(200).json(actionToken);
+    } catch (e) {
+      return res
+        .status(e.status || 500)
+        .json({ error: e.message || "Internal Server Error" });
+    }
+  }
+
+  public async setForgotPassword(
+    req: Request,
+    res: Response,
+  ): Promise<Response<void>> {
+    try {
+      const { password } = req.body;
+      const { jwtPayload } = req.res.locals;
+
+      await authService.setForgotPassword(
+        password,
+        jwtPayload._id,
+        req.get("Authorization"),
+      );
+
+      return res.sendStatus(200);
     } catch (e) {
       return res
         .status(e.status || 500)
